--- a/paper/background.tex
+++ b/paper/background.tex
@@ -79,7 +79,7 @@ Hardware support could range from persist barriers to support for transactional
 memory. However, existing hardware transactional memory (e.g. in Intel
 processors) is deprecated due to bugs. Instead, we are left with enough support
 for software transactional memory, which has similar problems as other
-approches, namely performance and usability~\cite{stm}. However, hardware
+approaches, namely performance and usability~\cite{stm}. However, hardware
 transactional memory \textit{could} be a
 reality~\cite{kolli:asplos16,lu:tos16,wang:cal15}---a reality this paper
 assumes. Thus, we are focusing on developing a key-value store built for BNVM
