--- a/paper/main.tex
+++ b/paper/main.tex
@@ -58,7 +58,7 @@ Database Design and Implementation: Class Project\\\vspace{-2mm}Instructor: Shel
 \section*{Abstract}
 
 
-Byte-addressable non-volatile memory (BNVM) will change the memory heirarchy, and
+Byte-addressable non-volatile memory (BNVM) will change the memory hierarchy, and
 applications must be ready to exploit the advantages afforded by these
 technologies while minimizing their weaknesses. Changes in power use
 characteristics, consistency requirements, and wear-out means that systems
