--- a/paper/results.tex
+++ b/paper/results.tex
@@ -92,7 +92,7 @@ some time after the table is expanded. However, since the elements are always
 reinserted at the top level, eventually these collisions will automatically
 balance the table as more elements are inserted, amortizing the work of
 reinserting during a rehash over future inserts without the extra code
-complexity required for doing this explicitely.
+complexity required for doing this explicitly.
 
 
 
