--- a/paper/background.tex
+++ b/paper/background.tex
@@ -35,7 +35,7 @@ out~\cite{Jayakumar2014powering}. In fact, from a survey on
 papers~\cite{dhiman_pdram:_2009,lee_architecting_2009,xiangyu_dong_nvsim:_2012,qureshi_scalable_2009,Chen_rethinkingdatabase,bedeschi_8mb_2004} discussing
 energy consumption of PCM and DRAM, we can see that the energy cost per bit to
 write to PCM is 50 times more expensive, but
-the idle cost of DRAM is a \textit{billion} times the write cost per bit. This
+the idle cost of a DRAM chip is a \textit{billion} times the per-bit write cost. This
 means that the idle cost of DRAM can only be surpassed by PCM when writing a
 billion bits per second. While this is large, it is not unreachable---systems
 must be careful to avoid excessive copies and rewrites when using PCM, something 
