--- a/paper/main.tex
+++ b/paper/main.tex
@@ -78,8 +78,8 @@ look like, while minimizing transaction sizes. It provides insert and lookup
 functionality with a significant performance improvement over \bdb, while
 providing an improvement in consistency safety with respect to power cycles, and
 provides better quality of service insert operations. Finally, we demonstrate
-that a new Cuckoo hashing variant can reduce data movement and improve the
-performance of rehashing significantly.
+that a new Cuckoo hashing variant can reduce data movement and significantly improve the
+performance of rehashing.
 
 
 \input{intro}
