--- a/paper/main.tex
+++ b/paper/main.tex
@@ -34,6 +34,33 @@ Database Design and Implementation: Class Project\\\vspace{-2mm}Instructor: Shel
 \newcommand{\etal}{\emph{et~al.}\xspace}
 \newcommand{\bdb}{Berkeley DB\xspace}
 \begin{document}
+
+\onecolumn
+\begin{center}
+	{\LARGE Cover Letter}
+\end{center}
+
+First, I want to say thank you for a great class; I really enjoyed it and felt
+like I learned a lot. Secondly, I wanted to point out a couple things about this
+project.
+
+The goals changed a few times over the quarter, the first time after I realized
+that the Cuckoo hashing variant was interesting, and a second time once I got
+sick. I decided to pull in some parts of ``B'' in the proposal early, because
+the goals of this project were in part to explore ideas that might be useful for
+research in the future. I clearly did not get to implement all of the goals in
+``B'', as some of them were quite lofty, however, I do think I hit my target,
+and I do plan to develop parts of the work herein further.
+I wish I had more time to polish the writing here, but getting sick in week 9 is
+more devastating that I had thought. Thanks again for the help. And thank you
+for the great quarter.
+
+--Daniel
+
+\clearpage
+
+\twocolumn
+
 \biolinum
 \maketitle
 \libertine 
